# recipe-extractor

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  recipe-extractor.py  video_transcripts.py
.github/workflows/: python-tests.yml
tests/: test_convert_to_markdown.py  test_healthiness_schema.py  test_servers.py  test_transcript_logic.py
