[project]
name = "recipe-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.84.0",
    "yt-dlp>=2025.5.22",
    "mcp>=1.9",
    "youtube-transcript-api>=0.6.2",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
]
